--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   },
   "devDependencies": {
     "babel-cli": "^6.10.1",
-    "babel-preset-es2015": "^6.9.0"
+    "babel-preset-es2015": "^6.9.0",
+    "chai": "^3.5.0",
+    "mocha": "^3.1.2"
   },
   "scripts": {
     "build": "rm -rf ./dist && babel src --out-dir dist",
-    "prepublish": "npm run build"
+    "test": "mocha",
+    "prepublish": "npm test && npm run build"
   },
   "dependencies": {
     "@yahapi/errors": "^0.2.2",
