--- a/package.json
+++ b/package.json
@@ -9,12 +9,6 @@
     "type": "git",
     "url": "https://github.com/yahapi/ajv-validate.git"
   },
-  "devDependencies": {
-    "babel-cli": "^6.10.1",
-    "babel-preset-es2015": "^6.9.0",
-    "chai": "^3.5.0",
-    "mocha": "^3.1.2"
-  },
   "scripts": {
     "build": "rm -rf ./dist && babel src --out-dir dist",
     "test": "mocha",
@@ -22,8 +16,16 @@
   },
   "dependencies": {
     "@yahapi/errors": "^0.2.2",
-    "ajv": "^4.1.5",
-    "lodash": "^4.13.1",
-    "moment": "^2.13.0"
+    "ajv": "^4.9.3",
+    "lodash": "^4.17.2",
+    "mocha": "^3.2.0",
+    "moment": "^2.17.1"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.18.0",
+    "babel-preset-latest": "^6.16.0",
+    "babel-register": "^6.18.0",
+    "chai": "^3.5.0",
+    "mocha": "^3.1.2"
   }
 }
